# or

./: README.md  default.nix  or.cabal  or.nix
ci/: ci.nix  jobsets.json  jobsets.nix
etc/: notes
src/Data/: Both.hs  MaybeEither.hs  MaybeThese.hs  Neither.hs  None.hs  Or.hs  Some.hs  That.hs  These.hs  This.hs
