name:               or
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2018 Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Three data types
category:           Data
description:       
  <<https://raw.githubusercontent.com/qfpl/assets/master/data61-transparent-bg.png>>
  .
  Three data types:

  1. `λa b → Maybe (Either a b)`
  2. `λa b → Either (Either a b) ((,) a b)` *aka `These`*
  3. `λa b → Maybe (Either (Either a b) ((,) a b))`
homepage:           https://github.com/qfpl/or
bug-reports:        https://github.com/qfpl/or/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:qfpl/or.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , semigroups >= 0.8 && < 1
                    , lens >= 4 && < 5
                    , papa >= 0.3 && < 0.4
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.MaybeThese
                    Data.MaybeEither
                    Data.These
                    Data.This
                    Data.That
                    Data.Both
                    Data.Or
                    Data.Neither

test-suite          tests

  build-depends:      QuickCheck >= 2.9.2 && < 2.11
                    , base >= 4.8 && < 4.11
                    , checkers >= 0.4.6 && < 0.5
                    , lens >= 4.15 && < 4.16
                    , or
                    , tasty >= 0.11 && < 0.12
                    , tasty-hunit >= 0.9 && < 0.10
                    , tasty-quickcheck >= 0.8.4 && < 0.10

  type:             
                    exitcode-stdio-1.0

  main-is:          
                    Tests.hs

  hs-source-dirs:   
                    test

  default-language: 
                    Haskell2010

  ghc-options:       
                    -Wall
